# rusty-ray

./: .bacon.lsp.json  Cargo.toml  README.md
src/: lib.rs  main.rs
src/camera/: camdata.rs
src/data/: image.rs  imgrad.rs  mod.rs  pixel.rs
src/domain/: adapter.rs  factory.rs  mod.rs
src/domain/camera/: camdata.rs  camera.rs  mod.rs
src/domain/collision/: adapter.rs  hitlist.rs  hitrecord.rs  hittable.rs  mod.rs
src/domain/collision/data/: hitinput.rs  hitobject.rs  hitrecord.rs  hittables.rs  mod.rs  sphere.rs
src/domain/collision/domain/: adapter.rs  concurrent_hit.rs  hitlist.rs  hittask.rs  mod.rs
src/domain/collision/traits/: hitobject.rs  hittable.rs  hittables.rs  mod.rs  sphere.rs
src/domain/color/: colorio.rs  mod.rs
src/domain/image/: factory_v1.rs  factory_v2.rs  factory_v3.rs  factory_v4.rs  mod.rs
src/domain/math3d/: constant.rs  ray.rs  sphere.rs  vector.rs
src/domain/selfsync/: collect.rs  fanin.rs  mod.rs  pipeline.rs  pump_value.rs  waitgroup.rs  workerpool.rs
src/imgio/: imrender.rs  imtypes.rs  mod.rs
src/imgrad/: mod.rs  types.rs  utils.rs
src/math3d/: mod.rs  ray.rs  sphere.rs  vector.rs
src/present/: imrender.rs  mod.rs
src/selfsync/: mod.rs  pipeline.rs
