[package]
name = "rusty-ray"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "a concurrent ray tracing engine"
homepage = "https://github.com/D-K-E/rusty-ray"
license-file = "LICENSE"

[dependencies]
image = "0.25.6"
smol = "2.0.2"
nalgebra = "0.33.2"
rust_decimal = {version="1.37.1", features=["macros"]}
num-traits = "0.2.19"

